# rust-playground

./: .gitignore  README.md
datamaster_migrate/: .conf.tpl.toml  .tpl.env  Cargo.toml  README.md  empty_partners.csv  rustfmt.toml
datamaster_migrate/fixtures/: no_migr_fc.csv  partner.csv  sku_partner.csv
datamaster_migrate/src/: lib.rs  migr_product.rs
