[package]
name = "datamaster_migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dm"
path = "src/migr_product.rs"

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "macros", "postgres", "bigdecimal", "chrono"] }
anyhow = { version = "1"}
tokio = { version = "1", features = ["full"]  }
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"]}
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
serde_json = "1"
regex = "1"
lazy_static = "1"
log = "0.4"
env_logger = "0.9"
thiserror = "1"
futures = "0.3"
umya-spreadsheet = "0.7"
csv = "1.1"
rand = { version = "0.8", features = ["std_rng", "std"] }
clap = { version = "3.2.17", features = ["derive"] }
config = "0.13"
